naming strategy unique ids based on list of cgmes object references
Signed-off-by: Luma <zamarrenolm@aia.es>